<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ContactActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:gravity="center"
            android:text="@string/cNameTextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?android:attr/colorForeground" />

        <EditText
            android:id="@+id/nameInputTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="2"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/your_name"
            android:inputType="textPersonName"
            android:textColorHint="#757575"
            android:autofillHints=""
            android:layout_margin="8dp"
            android:background="@drawable/border" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:gravity="center"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?android:attr/colorForeground" />

        <EditText
            android:id="@+id/emailInputTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_span="2"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/border"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress"
            android:textColorHint="#757575" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/messageTextView"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_span="2"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/message"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?android:attr/colorForeground" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@+id/messageInputTextView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="8dp"
            android:layout_span="2"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/border"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/your_message"
            android:inputType="textMultiLine"
            android:textColorHint="#757575" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Spinner
            android:id="@+id/reasonSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_span="2"
            android:layout_weight="1"
            android:contentDescription="@string/content_desc"
            android:spinnerMode="dialog" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_span="2"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/send_the_message" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_span="2"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@android:string/cancel" />
    </TableRow>


</TableLayout>